APPS-637: ApplicationCatalog works with pbcRegistry API instead of files (#8281)
* APPS-637: add HTTPApplicationCatalogRepository

--- a/data/translation/Zed/de_DE.csv
+++ b/data/translation/Zed/de_DE.csv
@@ -15,3 +15,5 @@ Updates,Aktualisierung
 Provider,Anbieter
 Name,Name
 Status,Status
+"Disconnect app","App trennen"
+"Connection is failed","Verbindung ist fehlgeschlagen"
