--- a/data/translation/Zed/en_US.csv
+++ b/data/translation/Zed/en_US.csv
@@ -15,3 +15,5 @@ Updates,Updates
 Provider,Provider
 Name,Name
 Status,Status
+"Disconnect app","Disconnect app"
+"Connection is failed","Connection is failed"
